Removed old references to locally build colorpicker code. Still haven't worked out where to get the css url from though.

--- a/colorpicker/examples/html5.html
+++ b/colorpicker/examples/html5.html
@@ -91,8 +91,7 @@
 	
 	<!-- YUI3 Core -->
 	<script type="text/javascript" src="http://yui.yahooapis.com/3.4.0/build/yui/yui-min.js"></script>
-	<script type="text/javascript" src="../../../build/gallery-colorpicker/gallery-colorpicker-debug.js"></script>
-	<link type="text/css" rel="stylesheet" href="../../../build/gallery-colorpicker/assets/gallery-colorpicker-core.css" />
+	<link type="text/css" rel="stylesheet" href="http://yui.yahooapis.com/build/gallery-colorpicker/assets/gallery-colorpicker-core.css" />
 	<script type="text/javascript">
 		YUI({}).use('gallery-colorpicker', function (Y) {
 		
