--- a/colorpicker/examples/html5.html
+++ b/colorpicker/examples/html5.html
@@ -91,9 +91,12 @@
 	
 	<!-- YUI3 Core -->
 	<script type="text/javascript" src="http://yui.yahooapis.com/3.4.0/build/yui/yui-min.js"></script>
-	<link type="text/css" rel="stylesheet" href="http://yui.yahooapis.com/build/gallery-colorpicker/assets/gallery-colorpicker-core.css" />
+	<!-- Core CSS for colorpicker -->
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?gallery-2011.09.14-20-40/build/gallery-colorpicker/assets/gallery-colorpicker-core.css"> 
 	<script type="text/javascript">
-		YUI({}).use('gallery-colorpicker', function (Y) {
+		YUI({
+			gallery: 'gallery-2011.09.14-20-40'
+		}).use('gallery-colorpicker', function (Y) {
 		
 			// create a picker and render it
 			var picker = new Y.ColorPicker();
